added .gitignore file and updated readme

--- a/scss/_custom-variables.scss
+++ b/scss/_custom-variables.scss
@@ -58,8 +58,8 @@ $primary:       $red;
 $info:          $azure;
 $warning:       $iris;
 $danger:        $golden-yellow;
-$light:         $gray-100;
-$dark:          $gray-700; 
+// $light:         $gray-100;
+// $dark:          $gray-700; 
 
 
 
