--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -31,7 +31,7 @@
 //  "cool": #4d3fa3
 // );
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
 $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $red: #d22030;
