--- a/scss/components/_timeline.scss
+++ b/scss/components/_timeline.scss
@@ -1,14 +1,17 @@
 .timeline {
 	list-style: none;
 	padding-left: 15px;
-	padding-top: .5rem;
-	padding-bottom: .5rem;
+	padding-top: .25rem;
+	padding-bottom: .25rem;
 	border-left: 1px solid $primary;
+
+	li {
+		position: relative;
+		margin: .75rem 0;
+	} 
 
 	&-header,
 	&-event {
-		position: relative;
-		margin: .5rem 0;
 
 		&:before {
 			content: " ";
@@ -22,6 +25,12 @@
 			border-radius: 11px;
 			background: $white;
 		}
+
+		&--align-top {
+			&:before {
+				top: .75rem;
+			}
+		}
 	}
 
 	&-event {
@@ -32,5 +41,22 @@
 			border: none;
 			background: $primary;
 		}	
+	}
+
+	&.timeline--align-top {
+		.timeline-header,
+		.timeline-event {
+			&:before {
+				top: .75rem;
+			}
+
+			&--align-center {
+				&:before {
+					top: 50%;
+				}
+			}
+			
+		}
+
 	}
 }
