--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -31,8 +31,10 @@
 //  "cool": #4d3fa3
 // );
 
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
-$font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+// @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+// $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+$font-family-sans-serif: ATCOverlook, "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $red: #d22030;
 $cinnabar: #e64b36;
