--- a/scss/metaphor-v2.scss
+++ b/scss/metaphor-v2.scss
@@ -5,6 +5,7 @@
 
 
 //Custom Metaphor variables declared here (overriding Bootstrap's defaults)
+@import 'base/fonts';
 @import 'base/variables';
 
 // Bootstrap: Required
