--- a/scss/base/_fonts.scss
+++ b/scss/base/_fonts.scss
@@ -3,6 +3,8 @@
   	src: 
   		url('../fonts/FSLolaWeb-Bold.woff2') format('woff2'), 
     	url('../fonts/FSLolaWeb-Bold.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
     font-display: swap;
 }
 
