add typography and heading styles

--- a/scss/base/_globals.scss
+++ b/scss/base/_globals.scss
@@ -1,11 +1,20 @@
 html {
-	font-size: 15px;
+	font-size: 62.5%;
 }
 
-a {
+// a {
+// 	text-decoration: underline;
+// }
+
+.font-display {
+	font-family: $font-family-display;
+}
+
+.hr-metaphor {
+	border-top: 7px solid $primary; 
+}
+
+.text-underline {
 	text-decoration: underline;
 }
 
-.fontDisplay {
-	font-family: $font-family-display;
-}
