--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -10,7 +10,7 @@
 	}
 
 	.nav-link {
-		color: $black;
+		color: $dark;
 		border-bottom: 1px solid transparent;
 		
 		&.active {
@@ -19,7 +19,7 @@
 		}
 
 		&:hover {
-			border-bottom-color: $black;
+			border-bottom-color: $dark;
 		}
 	}
 } 
