--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,8 +1,8 @@
 @font-face {
   	font-family: FSLola;
   	src: 
-  		url('../fonts/FSLolaWeb-Bold.woff2') format('woff2'), 
-    	url('../fonts/FSLolaWeb-Bold.woff') format('woff');
+  		url('//s3-us-west-2.amazonaws.com/metalab-fonts/FSLolaWeb-Bold.woff2') format('woff2'), 
+    	url('//s3-us-west-2.amazonaws.com/metalab-fonts/FSLolaWeb-Bold.woff') format('woff');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
@@ -11,8 +11,8 @@
 @font-face {
   	font-family: ATCOverlook;
   	src: 
-  		url('../fonts/ATCOverlook-Regular.woff2') format('woff2'), 
-    	url('../fonts/ATCOverlook-Regular.woff') format('woff');
+  		url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-Regular.woff2') format('woff2'), 
+    	url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-Regular.woff') format('woff');
 	font-weight: 400;
 	font-style: normal;
   font-display: swap;
@@ -21,8 +21,8 @@
 @font-face {
   	font-family: ATCOverlook;
   	src: 
-  		url('../fonts/ATCOverlook-RegularItalic.woff2') format('woff2'), 
-    	url('../fonts/ATCOverlook-RegularItalic.woff') format('woff');
+  		url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-RegularItalic.woff2') format('woff2'), 
+    	url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-RegularItalic.woff') format('woff');
 	font-weight: 400;
 	font-style: italic;
   font-display: swap;
@@ -31,8 +31,8 @@
 @font-face {
   	font-family: ATCOverlook;
   	src: 
-  		url('../fonts/ATCOverlook-Bold.woff2') format('woff2'), 
-    	url('../fonts/ATCOverlook-Bold.woff') format('woff');
+  		url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-Bold.woff2') format('woff2'), 
+    	url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-Bold.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
   font-display: swap;
@@ -41,8 +41,8 @@
 @font-face {
   	font-family: ATCOverlook;
   	src: 
-  		url('../fonts/ATCOverlook-BoldItalic.woff2') format('woff2'), 
-    	url('../fonts/ATCOverlook-BoldItalic.woff') format('woff');
+  		url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-BoldItalic.woff2') format('woff2'), 
+    	url('//s3-us-west-2.amazonaws.com/metalab-fonts/ATCOverlook-BoldItalic.woff') format('woff');
 	font-weight: 700;
 	font-style: italic;
   font-display: swap;
