major updated to docs. Also updated some paths for fonts and images, as S3 bucket changed

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -150,11 +150,11 @@ hr
   border 0
   border-top 1px solid $borderColor
 
-table
-  border-collapse collapse
-  margin 1rem 0
-  display: block
-  overflow-x: auto
+// table
+//   border-collapse collapse
+//   margin 1rem 0
+//   display: block
+//   overflow-x: auto
 
 tr
   border-top 1px solid #dfe2e5
