--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -165,14 +165,14 @@ hr
 //   display: block
 //   overflow-x: auto
 
-tr
-  border-top 1px solid #dfe2e5
-  &:nth-child(2n)
-    background-color #f6f8fa
+// tr
+//   border-top 1px solid #dfe2e5
+//   &:nth-child(2n)
+//     background-color #f6f8fa
 
-th, td
-  border 1px solid #dfe2e5
-  padding .6em 1em
+// th, td
+//   border 1px solid #dfe2e5
+//   padding .6em 1em
 
 .custom-layout
   padding-top $navbarHeight
