--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -6,6 +6,10 @@
 @require './wrapper'
 @require './toc'
 
+main 
+  min-height: calc(100vh - 275px)
+
+  
 // html, body
 //   padding 0
 //   margin 0
