--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -16,6 +16,10 @@
 		&.active {
 			color: $red;
 			border-bottom-color: $red;
+
+			&:focus {
+				border-bottom-color: $red;
+			}
 		}
 
 		&:hover {
