--- a/src/scss/metaphor-v2.scss
+++ b/src/scss/metaphor-v2.scss
@@ -57,7 +57,8 @@
 @import 'components/rise-arrow';
 @import 'components/timeline';
 @import 'components/datepicker';
-
+@import 'components/breadcrumbs';
+@import 'components/buttons';
 
 
 
