--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -45,8 +45,9 @@ $font-size-base:              1.6rem;
 $headings-font-weight:        700;
 $headings-color:              $dark;
 
-
 $border-radius:               .4rem !default;
 $border-radius-lg:            .45rem !default;
 $border-radius-sm:            .35rem !default;
+
+$breadcrumb-divider: quote("\203A");
 
