--- a/src/scss/metaphor-v2.scss
+++ b/src/scss/metaphor-v2.scss
@@ -59,6 +59,7 @@
 @import 'components/datepicker';
 @import 'components/breadcrumbs';
 @import 'components/buttons';
+@import 'components/forms';
 
 
 
