remove metalab subfooter from metaphor stylesheet, add it to docs stylesheet

--- a/docs/.vuepress/theme/styles/theme.styl
+++ b/docs/.vuepress/theme/styles/theme.styl
@@ -281,4 +281,14 @@ hr
     .page
       padding-left 0
 
+.footer-metaphor__subfooter {
+    background: #212529;
+    color: #adb5bd;
+    padding: 2rem 1.5rem 1.5rem 1.5rem;
+}
+
+.footer-metaphor__subfooter a{
+    color:#adb5bd;
+}
+
 @require './mobile.styl'
